// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description renders successfully 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontFamily": "Roboto",
            "fontSize": 18,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 21,
            "marginTop": 10,
            "textAlign": "center",
          },
        ]
      }
      testID="title"
    >
      HighTable
    </Text>
  </View>
</View>
`;

exports[`Description renders with the right color 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      color="#F89505"
      style={
        Array [
          Object {
            "color": "#F89505",
            "fontFamily": "Roboto",
            "fontSize": 18,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 21,
            "marginTop": 10,
            "textAlign": "center",
          },
        ]
      }
      testID="title"
    >
      HighTable
    </Text>
  </View>
</View>
`;
